<resources>
    <string name="app_name">NCmedic</string>
    <string name="action_settings">Settings</string>
    <string name="protocols">Protocols</string>
    <string-array name="drugs">
        <item>Acetaminophen (Tylenol)</item>
        <item>Adenosine (Adenocard)</item>
        <item>Albuterol</item>
        <item>Amiodarone (Cordarone)</item>
        <item>Aspirin</item>
        <item>Atropine</item>
        <item>Atropine/Pralidoxime Nerve Agent Kit</item>
        <item>Calcium Chloride</item>
        <item>Dextrose 10%, 25%, 50%</item>
        <item>Diazapam (Valium)</item>
        <item>Diltiazem (Cardizem)</item>
        <item>Diphenhydramine (Benadryl)</item>
        <item>Dopamine</item>
        <item>Epinephrine 1:1,000</item>
        <item>Epinephrine 1:10,000</item>
        <item>Etomidate (Amidate)</item>
        <item>Fentanyl (Sublimaze)</item>
        <item>Furosemide (Lasix)</item>
        <item>Glucagon</item>
        <item>Oral Glucose</item>
        <item>Haloperidol (Haldol)</item>
        <item>Ibuprofin (Motrin)</item>
        <item>Ipratropium (Atrovent)</item>
        <item>Ketorolac (Toradol)</item>
        <item>Lactated Ringer\'s Solution</item>
        <item>Lidocaine</item>
        <item>Magnesium Sulfate</item>
        <item>Methylprednisone (Solu-medrol)</item>
        <item>Midazolam</item>
        <item>Morphine Sulfate</item>
        <item>Naloxone (Narcan)</item>
        <item>Normal Saline</item>
        <item>Nitroglycerine</item>
        <item>Nitrous Oxide</item>
        <item>Ondanstron (Zofran)</item>
        <item>Oxygen</item>
        <item>Oxymetazoline (Afrin)</item>
        <item>Pralidoxime (2-PAM)</item>
        <item>Promethazine (Phenergan)</item>
        <item>Rocuronium</item>
        <item>Sodium Bicarbonate</item>
        <item>Succinylcholine</item>
        <item>Vasopressin (Pitressin)</item>
        <item>Vecuronium</item>
    </string-array>
    <string name="calculators">Calculators</string>
    <string name="title_activity_protocols">Protocols</string>
    <string name="protocols_adt_general">Adult General</string>
    <string name="protocols_adt_cardiac">Adult Cardiac</string>
    <string name="protocols_adt_medical">Adult Medical</string>
    <string name="protocols_adt_OB">Adult OB</string>
    <string name="protocols_adt_trauma">Adult Trauma</string>
    <string name="protocols_ped_general">Pediatric General</string>
    <string name="protocols_ped_cardiac">Pediatric Cardiac</string>
    <string name="protocols_ped_medical">Pediatric Medical</string>
    <string name="protocols_ped_trauma">Pediatric Trauma</string>
    <string name="protocols_com_cardiac">Combined General</string>
    <string name="protocols_com_medical">Combined Environmental</string>
    <string name="protocols_com_trauma">Combined Trauma</string>
    <string name="title_activity_protocol_viewer">Protocol Viewer</string>
    <string name="nextPage">Next Page &gt;</string>
    <string name="prevPage">&lt; Previous Page</string>
    <string name="title_activity_drug_picker">EMS Drugs</string>
    <string name="image_description">NC Medic Logo</string>
    <string-array name="menu_items_main">
        <item>Protocols</item>
        <item>EMS Drugs</item>
        <item>Calculators</item>
        <item>Tools</item>
    </string-array>
    <string-array name="menu_items_clacs">
        <item>Glasgow C
            oma Scale</item>
        <item>Dosage Calculator</item>
        <item>Fluid over Time</item>
        <item>APGAR Score</item>
        <item>King Airway Sizes</item>
    </string-array>
    <string-array name="menu_items_tools">
        <item>Pill Identifier</item>
        <item>Medevac Tool</item>
        <item>Abbreviation</item>
    </string-array>
    <string name="drug_uses">Uses</string>
    <string name="indications_contra">Indications and Contraindications</string>
    <string name="adult_dosage">Adult Dosage</string>
    <string name="ped_dosage">Pediatric Dosage</string>
    <string name="ped_drug_list">Color Coded Pediatric Drugs</string>
    <string name="pending">--</string>
    <string name="drug_name">Drug Name</string>
    <string name="trade_name">Trade Name</string>
    <string name="title_activity_calculators">Calculators</string>
    <string name="hello_world">Hello world!</string>
    <string name="desired_dose">Desired Dose:</string>
    <string name="vial_calc_title">Calculate Dose from Vial</string>
    <string-array name="dosage_units">
        <item>mg</item>
        <item>mg/kg</item>
        <item>mcg/kg</item>
    </string-array>
    <string-array name="drip_sets">
        <item>60gtts microdrip</item>
        <item>20gtts drip set</item>
        <item>15gtts drip set</item>
        <item>10gtts drip set</item>
    </string-array>
    <string-array name="time_units">
        <item>mins</item>
        <item>hrs</item>
    </string-array>
    <string name="patient_weight">patient weight</string>
    <string-array name="weight_units">
        <item>lbs</item>
        <item>kg</item>
    </string-array>
    <string name="vial">Vial</string>
    <string name="drug_conc"></string>
    <string name="per">per</string>
    <string name="vial_volume"></string>
    <string name="dosage">Dosage</string>
    <string name="draw_up">Draw Up</string>
    <string name="calculate">calculate</string>
    <string-array name="volume_units">
        <item>mL</item>
        <item>cc</item>
    </string-array>
    <string name="title_activity_vial_calculator">Dosage Calculator</string>
    <string name="dose">Dose:</string>
    <string name="concentration">Concentration:</string>
    <string name="volume">Volume:</string>
    <string name="weight">PT Weight:</string>
    <string-array name="mass_units">
        <item>mg</item>
        <item>mcg</item>
    </string-array>
    <string name="pendindML">--mL</string>
    <string name="one">1</string>
    <string name="drip_calc">Drip Rate Calculator</string>
    <string name="gcs_calc">GCS Calculator</string>
    <string name="vial_calc">Drug from Vial</string>
    <string name="title_activity_gcs_calculator">Glasgow Coma Scale</string>
    <string name="title_activity_drip_calculator">Fluid Over Time</string>
    <string name="gcs">Glasgow Coma Scale</string>
    <string name="gcs_best_eye">Best Eye Response</string>
    <string name="gcs_best_verbal">Best Verbal Response</string>
    <string name="gcs_pending">--</string>
    <string name="gcs_best_motor">Best Motor Response</string>
    <string-array name="gcs_eye">
        <item>Opens Eyes Spontantaneously</item>
        <item>Opens Eyes to Voice</item>
        <item>Opens Eyes to Pain</item>
        <item>Does not Open Eyes</item>
    </string-array>
    <string-array name="gcs_verbal">
        <item>Oriented</item>
        <item>Confused, Disoriented</item>
        <item>Innapropreate Words</item>
        <item>Incomprehensible Sounds</item>
        <item>No Sounds</item>
    </string-array>
    <string-array name="gcs_motor">
        <item>Obeys Commands</item>
        <item>Localizes Pain</item>
        <item>Withdrawal from Pain</item>
        <item>Flexion to Pain</item>
        <item>Extension to Pain</item>
        <item>No Movement</item>
    </string-array>
    <string name="drip_calc_title">Drip Rate Calculator</string>
    <string name="infusion_volume">Infusion Volume:</string>
    <string name="drip_set">Drip Set:</string>
    <string name="infuse_over">Infuse Over:</string>
    <string name="drips_per_minute">Drips per minute:</string>
    <string name="pending_drip">--gtts/min</string>
    <string name="pending_drop_inverse">1 drip every –– seconds</string>
    <string name="title_activity_apgar_calculator">APGAR Score</string>
    <string name="fluid_over_time">Fluid over Time</string>
    <string name="bag_volume">Bag Volume:</string>
    <string name="dosage_calculator">Dosage Calculator</string>
    <string name="on_hand">Drug on Hand:</string>
    <string name="apgar_score">APGAR Score</string>
    <string-array name="apgar_appearance">
        <item>blue/pale all over</item>
        <item>blue at extremities</item>
        <item>no cyanosis</item>
    </string-array>
    <string-array name="apgar_pulse">
        <item>absent</item>
        <item>less than 100</item>
        <item>greater than 100</item>
    </string-array>
    <string-array name="apgar_grimace">
        <item>no response to stimulation</item>
        <item>feeble cry when stimulated</item>
        <item>string cry or when stimulated</item>
    </string-array>
    <string-array name="apgar_activity">
        <item>none</item>
        <item>some flexion</item>
        <item>flexed arms and legs</item>
    </string-array>
    <string name="apgar_resp">Respiratory Effort</string>
    <string-array name="apgar_respirations">
        <item>none</item>
        <item>weak, irregular, gasping</item>
        <item>strong, lusty cry</item>
    </string-array>
    <string name="pending_apgar">--</string>
    <string name="title_activity_king_calculator">King Airway Calculator</string>
    <string name="height_prompt">Patient Height:</string>
    <string-array name="king_heights">
        <item>Above 6 feet</item>
        <item>5–6 feet</item>
        <item>4–5 feet</item>
        <item>35–45 inches</item>
        <item>41–51 inches</item>
    </string-array>
    <string name="king_size">King Airway Size:</string>
    <string name="king_size_default">Size 5</string>
    <string name="inflate_to_default">Inflate with:</string>
    <string name="king_airway">King Airway Sizes</string>
    <string name="protocol_name_prompt">Enter Protocol Name</string>
    <string name="imprint">Enter imprint here</string>
    <string name="shape_prompt">Shape:</string>
    <string name="imprint_prompt">Imprint:</string>
    <string name="color_prompt">Color:</string>
    <string name="size_prompt">Size:</string>
    <string name="scoring_prompt">Scoring:</string>
    <string name="scoring">Scoring</string>
    <string name="any_size">Any Size</string>
    <string name="any_score">Any Scoring</string>
    <string name="search_pills">Search Pills</string>
    <string name="pill_image">Pill Image</string>
    <string name="ingredients">Drug Ingredients</string>
    <string name="dosages">Ingredient Dosages</string>
    <string name="pill_id">Pill Identifier</string>
    <string name="imprint_instr_title">Separate imprints with space</string>
    <string name="shape_instr_title">Scroll for more shapes</string>
    <string name="scoring_instr_title">Number of divisions for splitting pill</string>
    <string name="medevac">Medevac Tool</string>
    <string name="clock_pending">00:00:00</string>
    <string name="abbrev">Medical Abbreviations</string>
    <string name="activation_state_title">Pro Features:</string>
    <string name="background">Background Color:</string>
</resources>