<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:scrollbars="none"
    tools:context=".PillId" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_bg"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/pill_search_imprint_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/imprint_prompt"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/ems_dark_blue" />

            <TextView
                android:id="@+id/pill_search_imprint_instr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/imprint_instr_title"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/grey" />

            <EditText
                android:id="@+id/pillSearchImprint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/imprint"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_bg"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/pill_search_shape_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/shape_prompt"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/ems_dark_blue" />

            <TextView
                android:id="@+id/pill_search_shape_instr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/shape_instr_title"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/grey" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fadingEdge="none"
                android:scrollbars="none" >

                <LinearLayout
                    android:id="@+id/pillShapeLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:animateLayoutChanges="true"
                    android:orientation="horizontal" >
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_bg"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/color_prompt"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/ems_dark_blue" />

            <Spinner
                android:id="@+id/pillColorSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/drug_colors_names" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_bg"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/size_prompt"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/ems_dark_blue" />

            <TextView
                android:id="@+id/pillSizeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/any_size"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/ems_dark_blue" />

            <SeekBar
                android:id="@+id/pillSizeSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="25"
                android:progress="0" />
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_bg"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/pill_search_scoring_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/scoring_prompt"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/ems_dark_blue" />

            <TextView
                android:id="@+id/pill_search_scoring_instr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/scoring_instr_title"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/grey" />
            
            <ImageView
                android:id="@+id/pillScoringIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/scoring"
                android:src="@drawable/pillscore1"
                android:visibility="gone" />

            <TextView
                android:id="@+id/pillScoreTextView"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:paddingBottom="4dp"
                android:text="@string/any_score"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/ems_dark_blue" />

            <SeekBar
                android:id="@+id/pillScoreSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="4"
                android:progress="0" />


        </LinearLayout>

        <Button
            android:id="@+id/pillSearchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_selectable"
            android:drawableLeft="@android:drawable/ic_search_category_default"
            android:onClick="searchPills"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/search_pills" />
    </LinearLayout>

</ScrollView>