<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculators" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <Button
            android:id="@+id/gcsCalcButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_height"
            android:background="@drawable/card_selectable"
            android:drawableLeft="@drawable/brain"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/gcs" />

        <Button
            android:id="@+id/dosageCalcButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_height"
            android:background="@drawable/card_selectable"
            android:drawableLeft="@drawable/syringe"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/dosage_calculator" />

        <Button
            android:id="@+id/dripCalcButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_height"
            android:background="@drawable/card_selectable"
            android:drawableLeft="@drawable/drip"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/fluid_over_time" />

        <Button
            android:id="@+id/apgarCalcButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_height"
            android:background="@drawable/card_selectable"
            android:drawableLeft="@drawable/baby"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/apgar_score" />

        <Button
            android:id="@+id/kingCalcButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_height"
            android:background="@drawable/card_selectable"
            android:drawableLeft="@drawable/airway"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/king_airway" />
    </LinearLayout>

</ScrollView>