<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_selectable"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin" >

    <ImageView
        android:id="@+id/pillImage"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:contentDescription="@string/pill_image"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/pillIngredientText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/ingredients"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/ems_dark_blue" />

        <TextView
            android:id="@+id/pillDosageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/dosages"
            android:textColor="@color/grey" />

    </LinearLayout>

</LinearLayout>