<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tools" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/clock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_bg"
            android:gravity="center"
            android:text="@string/clock_pending"
            android:textColor="@color/ems_dark_blue"
            android:textSize="60sp" />

        <Button
            android:id="@+id/pillIdButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_height"
            android:background="@drawable/card_selectable"
            android:drawableLeft="@drawable/pillsearch"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/pill_id" />

        <Button
            android:id="@+id/medevacButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_height"
            android:background="@drawable/card_selectable"
            android:drawableLeft="@drawable/helo"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/medevac" />

        <Button
            android:id="@+id/abbrevButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_height"
            android:background="@drawable/card_selectable"
            android:drawableLeft="@drawable/abbrev"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/abbrev" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        </LinearLayout>
    </LinearLayout>

</ScrollView>